--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "uuid": "^8.3.2",
-    "ws": "^7.5.3"
+    "ws": "^7.5.3",
+    "mysql2": "^2.3.2"
   }
 }
