--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "uuid": "^8.3.2",
     "ws": "^7.5.3",
     "mysql2": "^2.3.2",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "node-fetch": "^3.0.0",
+    "jwt-decode": "^3.1.2"
   }
 }
