--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "uuid": "^8.3.2",
-    "ws": "^7.5.3",
-    "mysql2": "^2.3.2",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
+    "mysql2": "^2.3.2",
     "node-fetch": "^3.0.0",
-    "jwt-decode": "^3.1.2"
+    "uuid": "^8.3.2",
+    "ws": "^7.5.3"
   }
 }
